# homkit_lock_nfc_access

./: CMakeLists.txt  README.md  homkit_lock_nfc_access.diff
adk/PAL/nRFConnect/: HAPPlatform.c  HAPPlatformAbort.c  HAPPlatformAccessorySetup+Init.h  HAPPlatformAccessorySetup.c  HAPPlatformAccessorySetupDisplay+Init.h  HAPPlatformAccessorySetupDisplay.c  HAPPlatformAccessorySetupNFC+Init.h  HAPPlatformAccessorySetupNFC.c  HAPPlatformBLE+Init.h  HAPPlatformBLE.c  HAPPlatformBLEPeripheralManager+Init.h  HAPPlatformBLEPeripheralManager.c  HAPPlatformClock.c  HAPPlatformConcurrency.c  HAPPlatformEui.c  HAPPlatformFeatures+Init.h  HAPPlatformKeyValueStore+Init.h  HAPPlatformKeyValueStore+SDKDomains.h  HAPPlatformKeyValueStore.c  HAPPlatformLog+Init.h  HAPPlatformLog.c  HAPPlatformMFiHWAuth+Init.h  HAPPlatformMFiHWAuth.c  HAPPlatformMFiTokenAuth+Init.h  HAPPlatformMFiTokenAuth.c  HAPPlatformMutex+Init.h  HAPPlatformMutex.c  HAPPlatformRandomNumber.c  HAPPlatformRunLoop+Init.h  HAPPlatformRunLoop.c  HAPPlatformServiceDiscovery.c  HAPPlatformSetup+Init.h  HAPPlatformSetup.c  HAPPlatformThread.c  HAPPlatformTimer.c  HAPPlatformUARP.h
samples/common/: CMakeLists.txt  Kconfig  overlay-custom-EUI-64.conf  overlay-external_flash.conf  overlay-hk-ble-only.conf  overlay-hk-bluetooth-controler.conf  overlay-hk-bluetooth-host.conf  overlay-hk-defaults.conf  overlay-hk-firmware-update.conf  overlay-hk-thread.conf  overlay-hk-thread_debug.conf  overlay-mtd-sed.conf  overlay-nfc.conf  overlay-nordic-dfu.conf
samples/common/configuration/nrf21540dk_nrf52840/: pm_static.yml
samples/common/configuration/nrf52833dk_nrf52833/: nrf52833dk_nrf52833.overlay  pm_static.yml
samples/common/configuration/nrf52840dk_nrf52840/: J_trace.overlay  nrf52840dk_nrf52840.overlay  pm_static.yml  pm_static_ext_flash.yml
samples/common/configuration/nrf5340dk_nrf5340_cpuapp/: nrf5340dk_nrf5340_cpuapp.overlay  nrf5340dk_nrf5340_cpuapp_thread.overlay  nrf5340dk_nrf5340_cpunet_thread.overlay  pm_static_ext_flash.yml
samples/common/mcuboot/: overlay-external_flash.conf  overlay-multi_image_dfu.conf
samples/common/src/: bluetooth_smp.c  bluetooth_smp.h  debug_accessory_setup.c  debug_accessory_setup.h  hap.c  main.c
samples/light_bulb/: CMakeLists.txt  Kconfig  prj.conf  prj_debug.conf  provision_report.json  sample.yaml
samples/light_bulb/boards/: nrf21540dk_nrf52840.conf  nrf21540dk_nrf52840_debug.conf  nrf52840dk_nrf52840_debug.conf
samples/light_bulb/child_image/: hci_rpmsg_debug.conf  mcuboot_debug.conf  multiprotocol_rpmsg.conf  multiprotocol_rpmsg_debug.conf
samples/light_bulb/child_image/mcuboot/boards/: nrf52833dk_nrf52833_debug.conf  nrf52840dk_nrf52840_debug.conf  nrf5340dk_nrf5340_cpuapp.conf
samples/light_bulb/src/: app.c
samples/lock/: CMakeLists.txt  Kconfig  prj.conf  prj_debug.conf  provision_report.json  sample.yaml
samples/lock/boards/: nrf5340dk_nrf5340_cpuapp.conf
samples/lock/child_image/: hci_rpmsg.conf  hci_rpmsg_debug.conf
samples/lock/child_image/mcuboot/: prj_debug.conf
samples/lock/child_image/mcuboot/boards/: nrf21540dk_nrf52840.conf  nrf21540dk_nrf52840_debug.conf  nrf52833dk_nrf52833.conf  nrf5340dk_nrf5340_cpuapp_debug.conf
samples/lock/src/: app.c  tag_reader.c
